; ModuleID = '/home/carl/AnghaBench/mpv/options/extr_m_option.c_split_char.c'
source_filename = "/home/carl/AnghaBench/mpv/options/extr_m_option.c_split_char.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8, i32, i32*)* @split_char to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @split_char(i32 %0, i8 zeroext %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8, align 1
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i8 %1, i8* %7, align 1
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  %12 = load i32, i32* %8, align 4
  %13 = icmp slt i32 %12, 1
  br i1 %13, label %14, label %15

14:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %50

15:                                               ; preds = %4
  store i32 0, i32* %10, align 4
  br label %16

16:                                               ; preds = %15, %47
  %17 = load i32, i32* %6, align 4
  %18 = load i8, i8* %7, align 1
  %19 = call i32 @bstrchr(i32 %17, i8 zeroext %18)
  store i32 %19, i32* %11, align 4
  %20 = load i32, i32* %11, align 4
  %21 = icmp sge i32 %20, 0
  br i1 %21, label %22, label %40

22:                                               ; preds = %16
  %23 = load i32, i32* %8, align 4
  %24 = load i32, i32* %10, align 4
  %25 = sub nsw i32 %23, %24
  %26 = icmp sgt i32 %25, 1
  br i1 %26, label %27, label %40

27:                                               ; preds = %22
  %28 = load i32, i32* %6, align 4
  %29 = load i32, i32* %11, align 4
  %30 = call i32 @bstr_splice(i32 %28, i32 0, i32 %29)
  %31 = load i32*, i32** %9, align 8
  %32 = load i32, i32* %10, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %10, align 4
  %34 = sext i32 %32 to i64
  %35 = getelementptr inbounds i32, i32* %31, i64 %34
  store i32 %30, i32* %35, align 4
  %36 = load i32, i32* %6, align 4
  %37 = load i32, i32* %11, align 4
  %38 = add nsw i32 %37, 1
  %39 = call i32 @bstr_cut(i32 %36, i32 %38)
  store i32 %39, i32* %6, align 4
  br label %47

40:                                               ; preds = %22, %16
  %41 = load i32, i32* %6, align 4
  %42 = load i32*, i32** %9, align 8
  %43 = load i32, i32* %10, align 4
  %44 = add nsw i32 %43, 1
  store i32 %44, i32* %10, align 4
  %45 = sext i32 %43 to i64
  %46 = getelementptr inbounds i32, i32* %42, i64 %45
  store i32 %41, i32* %46, align 4
  br label %48

47:                                               ; preds = %27
  br label %16

48:                                               ; preds = %40
  %49 = load i32, i32* %10, align 4
  store i32 %49, i32* %5, align 4
  br label %50

50:                                               ; preds = %48, %14
  %51 = load i32, i32* %5, align 4
  ret i32 %51
}

declare dso_local i32 @bstrchr(i32, i8 zeroext) #1

declare dso_local i32 @bstr_splice(i32, i32, i32) #1

declare dso_local i32 @bstr_cut(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
